--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,8 +84,8 @@ services:
     ports:
       - 8800:8800
     depends_on:
-      mongo:
-        condition: service_healthy
+      - mongo
+        # condition: service_healthy
     volumes:
       - ./expressAPI:/usr/src/app
       # - /usr/src/app/node_modules
